RESOLVED FIXED240285
[Xcode] Fix dependency cycles caused by Safari header imports
https://bugs.webkit.org/show_bug.cgi?id=240285
Summary [Xcode] Fix dependency cycles caused by Safari header imports
Elliott Williams
Reported 2022-05-10 12:16:18 PDT
There are a number of locations where we include an internally-available header produced by a target that depends on WebKit. These _usually_ don't fail the build when the build order in manually specified, but cause problems when building with "dependency order" target-level parallelism. They are true cycles, so we need to fix them.
Attachments
Elliott Williams
Comment 1 2022-05-10 13:59:13 PDT
Elliott Williams
Comment 2 2022-05-10 14:20:56 PDT
EWS
Comment 3 2022-05-31 14:48:27 PDT
Committed r295067 (251162@main): <https://commits.webkit.org/251162@main> Reviewed commits have been landed. Closing PR #581 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.