[Xcode] Fix dependency cycles caused by Safari header imports https://bugs.webkit.org/show_bug.cgi?id=240285

Reviewed by Tim Horton.

We were including headers produced by targets which depend on WebKit.
For Xcode engineering builds, this is not a valid dependency, because
an engineering build does not distinguish between a "header"
dependency and a regular target dependency. These errors have survived
in the codebase because:

- Xcode doesn't recognize header imports as "implicit dependencies",
so the build system hasn't traditionally known these dependencies
exist, except in some incremental builds.
- These headers are available in internal SDKs, so it's possible for
the targets to build out-of-order but build successfully (as long as
the first target to build can use a possibly-outdated version of the
code from the SDK).

When building targets in parallel, we are emitting more information to
recognize these as implicit dependencies (revealing the cycle) and the
build system is laying down framework bundle directories earlier on in
the build (preventing reliance on SDK frameworks).

* Source/WebKit/WebKit.xcodeproj/project.pbxproj: WebKit needs to build
  after AuthenticationServicesCore in internal builds. Add it as a
  product dependency.
* Source/WebKit/Configurations/WebKit.xcconfig: Because
  AuthenticationServicesCore.framework is not available externally, add
  it to EXCLUDED_SOURCE_FILE_NAMES. The build system still honors the
  product dependency ordering, but won't fail when it's missing.

* Source/WebKit/Platform/spi/ios/SafariServicesSPI.h: Added, contains
  interface declarations for needed SSReadingList API. Technically not
  SPI, but follows the convention of similar platform redeclaration
  headers.
* Source/WebKit/UIProcess/API/Cocoa/_WKElementAction.mm: WebKit cannot
  depend on SafariServices. Replace the import of SSReadingList.h with
  SafariServicesSPI.h.
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
  WebKit cannot depend on AuthenticationServices.framework. Thankfully,
  this import was unused. Delete it.
* Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm: WebKit cannot
  depend on SafariServices. Replace the import of SSReadingList.h with
  SafariServicesSPI.h.

Canonical link: https://commits.webkit.org/251162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295067 268f45cc-cd09-0410-ab3c-d52691b4dbfc